--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 # Core dependencies
 PySide6>=6.2
 psutil>=5.9
+nvidia-ml-py>=13.5
 
-# Optional (for NVIDIA GPU metrics)
-# Install to enable NVML-based GPU monitoring:
-# pynvml>=11.5
